<resources>
    <string name="app_name">JParty</string>
    <string name="justparty">JustParty</string>
    <string name="navigation_drawer_open">Abrir el Menú</string>
    <string name="navigation_drawer_close">Cerrar el Menú</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="access">Acceder</string>
    <string name="underlined_text">"<u>Todavía no estás registrado? Hazlo Ahora</u>"</string>
    <string name="passwordhint">Contraseña</string>
    <string name="emailhint">johndoe@example.com</string>
    <string name="loginusertext">Correo electrónico o Usuario</string>
    <string name="registerlabel">Registro</string>
    <string name="username">Nombre de usuario</string>
    <string name="birthdate">Fecha de nacimiento</string>
    <string name="email">Correo electrónico</string>
    <string name="usernamehint">JohnDoe33</string>
    <string name="birthdatehint">01-12-2024</string>
    <string name="province">Provincia</string>
    <string name="provinceprompt">Seleccione provincia</string>
    <string-array name="provincias_array">
        <item>A Coruña</item>
        <item>Álava</item>
        <item>Alicante</item>
        <item>Almería</item>
        <item>Asturias</item>
        <item>Ávila</item>
        <item>Badajoz</item>
        <item>Barcelona</item>
        <item>Burgos</item>
        <item>Cáceres</item>
        <item>Cádiz</item>
        <item>Cantabria</item>
        <item>Castellón</item>
        <item>Ciudad Real</item>
        <item>Córdoba</item>
        <item>Cuenca</item>
        <item>Girona</item>
        <item>Granada</item>
        <item>Guadalajara</item>
        <item>Guipúzcoa</item>
        <item>Huelva</item>
        <item>Huesca</item>
        <item>Islas Baleares</item>
        <item>Jaén</item>
        <item>La Rioja</item>
        <item>Las Palmas</item>
        <item>León</item>
        <item>Lérida</item>
        <item>Lugo</item>
        <item>Madrid</item>
        <item>Málaga</item>
        <item>Murcia</item>
        <item>Navarra</item>
        <item>Orense</item>
        <item>Palencia</item>
        <item>Pontevedra</item>
        <item>Salamanca</item>
        <item>Segovia</item>
        <item>Sevilla</item>
        <item>Soria</item>
        <item>Tarragona</item>
        <item>Santa Cruz de Tenerife</item>
        <item>Teruel</item>
        <item>Toledo</item>
        <item>Valencia</item>
        <item>Valladolid</item>
        <item>Vizcaya</item>
        <item>Zamora</item>
        <item>Zaragoza</item>
    </string-array>
</resources>