<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple">
    <ImageButton
        android:id="@+id/back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/left_arrow_white"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="90dp"
        android:src="@drawable/logojparty_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/separator"/>
    <View
        android:id="@+id/separator"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/white"
        android:layout_marginBottom="20dp"
        app:layout_constraintEnd_toEndOf="@+id/logo"
        app:layout_constraintStart_toStartOf="@+id/logo"
        app:layout_constraintBottom_toTopOf="@+id/white_screen"/>
    <View
        android:id="@+id/white_screen"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.8"
        app:layout_constraintWidth_percent="1"
        android:background="@drawable/top_rounded_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/register_form"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@+id/white_screen"
        app:layout_constraintBottom_toBottomOf="@+id/white_screen"
        app:layout_constraintStart_toStartOf="@+id/white_screen"
        app:layout_constraintEnd_toEndOf="@+id/white_screen"
        android:padding="10dp">
        <TextView
            android:id="@+id/access_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerlabel"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <View
            android:id="@+id/white_rectangle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="2dp"
            app:layout_constraintHeight_percent="0.45"
            app:layout_constraintWidth_percent="0.7"
            android:background="@drawable/rounded_border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/access_text"/>

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="@id/userinput"
            app:layout_constraintTop_toTopOf="@+id/white_rectangle"
            app:layout_constraintBottom_toTopOf="@id/userinput"/>
        <EditText
            android:id="@+id/userinput"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:textSize="12sp"
            android:hint="@string/usernamehint"
            android:layout_marginStart="10dp"
            app:layout_constraintWidth_percent="0.3"
            app:layout_constraintStart_toStartOf="@id/white_rectangle"
            app:layout_constraintTop_toBottomOf="@id/username"/>
        <TextView
            android:id="@+id/birthdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birthdate"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="@id/birthdateinput"
            app:layout_constraintTop_toTopOf="@+id/white_rectangle"
            app:layout_constraintBottom_toTopOf="@id/birthdateinput"/>

        <EditText
            android:id="@+id/birthdateinput"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:textSize="12sp"
            android:hint="@string/birthdatehint"
            app:layout_constraintWidth_percent="0.3"
            app:layout_constraintStart_toEndOf="@id/userinput"
            app:layout_constraintEnd_toEndOf="@id/white_rectangle"
            app:layout_constraintTop_toBottomOf="@id/username"/>

        <TextView
            android:id="@+id/emaillabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/email"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/userinput"
            app:layout_constraintStart_toStartOf="@id/userinput"
            app:layout_constraintBottom_toTopOf="@id/emailinput"
            />
        <EditText
            android:id="@+id/emailinput"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:hint="@string/emailhint"
            android:textSize="12sp"
            app:layout_constraintWidth_percent="0.3"
            app:layout_constraintStart_toStartOf="@id/emaillabel"
            app:layout_constraintTop_toBottomOf="@id/emaillabel" />

        <TextView
            android:id="@+id/provincelabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/province"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/birthdateinput"
            app:layout_constraintStart_toStartOf="@id/birthdateinput"
            app:layout_constraintBottom_toTopOf="@id/emailinput"
            />
        <EditText
            android:id="@+id/provinceeditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:textSize="11sp"
            android:clickable="true"
            app:layout_constraintWidth_percent="0.3"
            android:hint="@string/provinceprompt"
            android:inputType="none"
            app:layout_constraintTop_toBottomOf="@id/provincelabel"
            app:layout_constraintStart_toStartOf="@id/birthdateinput"
            app:layout_constraintEnd_toEndOf="@id/birthdateinput" />
        <Spinner
            android:id="@+id/provincespinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog"
            android:prompt="@string/provinceprompt"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <TextView
            android:id="@+id/passwordlabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/passwordhint"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/emailinput"
            app:layout_constraintStart_toStartOf="@id/passwordinput"
            app:layout_constraintBottom_toTopOf="@id/passwordinput"
            />
        <EditText
            android:id="@+id/passwordinput"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:hint="@string/passwordhint"
            android:textSize="12sp"
            app:layout_constraintWidth_percent="0.3"
            app:layout_constraintStart_toStartOf="@id/emaillabel"
            app:layout_constraintTop_toBottomOf="@id/passwordlabel"
            android:inputType="textPassword"/>
        <EditText
            android:id="@+id/passwordrepeatedinput"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:hint="Repetir contraseña"
            android:textSize="12sp"
            app:layout_constraintWidth_percent="0.3"
            app:layout_constraintStart_toStartOf="@id/birthdateinput"
            app:layout_constraintTop_toBottomOf="@id/passwordlabel"
            android:inputType="textPassword"/>

        <ImageButton
            android:id="@+id/circle_button"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/circle_button"
            app:layout_constraintEnd_toEndOf="@id/white_rectangle"
            app:layout_constraintStart_toStartOf="@id/white_rectangle"
            app:layout_constraintTop_toBottomOf="@id/passwordrepeatedinput" />
        <ImageView
            android:id="@+id/enter_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/enter_icon"
            app:layout_constraintEnd_toEndOf="@id/circle_button"
            app:layout_constraintStart_toStartOf="@id/circle_button"
            app:layout_constraintTop_toTopOf="@id/circle_button"
            app:layout_constraintBottom_toBottomOf= "@id/circle_button" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>